// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test view with messages 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <View
        style={
          Object {
            "marginBottom": 80,
          }
        }
      />
    }
    data={
      Array [
        Object {
          "action": null,
          "args": Object {},
          "hideBtn": false,
          "id": "first",
          "receiver": "receiver",
          "rows": Array [],
          "sender": "sender",
          "timestamp": 1000,
          "value": "hello",
        },
        Object {
          "action": "/tx",
          "args": Object {
            "currency": "DOT",
            "id": "txId",
          },
          "hideBtn": false,
          "id": "second",
          "receiver": "receiver",
          "rows": Array [],
          "sender": "sender",
          "timestamp": 1000,
          "value": "tx",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "scaleY": -1,
        },
        Object {
          "width": "100%",
        },
      ]
    }
    viewabilityConfigCallbackPairs={Array []}
    windowSize={5}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "marginBottom": 80,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "paddingLeft": 15,
              "paddingRight": 15,
              "scaleY": -1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "marginBottom": 10,
                "marginTop": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "backgroundColor": "#51caf5",
                  "color": "white",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              unread_messages_title
            </Text>
          </View>
          <View>
            <View
              style={
                Array [
                  Object {
                    "maxWidth": "80%",
                  },
                  Object {
                    "alignSelf": "flex-start",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "marginBottom": 5,
                      "marginTop": 5,
                    },
                    Object {},
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderRadius": 10,
                        "flexDirection": "row",
                        "padding": 10,
                        "width": "100%",
                      },
                      Object {
                        "backgroundColor": "#ECECEC",
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "fontFamily": "Roboto-Regular",
                          "fontSize": 15,
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                          "marginRight": 8,
                        },
                        Object {
                          "color": "#2F2F2F",
                          "paddingRight": 30,
                        },
                      ]
                    }
                  >
                    hello
                  </Text>
                  <Text
                    style={
                      Array [
                        Object {
                          "fontFamily": "Roboto-Regular",
                          "fontSize": 12,
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                          "marginTop": 7,
                          "textAlign": "center",
                        },
                        Object {
                          "bottom": 5,
                          "color": "#888888",
                          "position": "absolute",
                          "right": 9,
                        },
                      ]
                    }
                  >
                    03:00
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "maxWidth": "80%",
                  },
                  Object {
                    "alignSelf": "flex-end",
                  },
                ]
              }
            >
              <View />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "paddingLeft": 15,
              "paddingRight": 15,
              "scaleY": -1,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            nativeID="animatedComponent"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "flex-end",
                "borderColor": "#DADADA",
                "borderRadius": 10,
                "borderWidth": 1,
                "justifyContent": "center",
                "marginBottom": 5,
                "marginTop": 5,
                "minWidth": "48%",
                "opacity": 1,
                "padding": 10,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  Object {
                    "marginBottom": 5,
                  },
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#888888",
                      "fontSize": 20,
                    },
                    undefined,
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰸇
              </Text>
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 13,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginLeft": 3,
                  }
                }
              >
                you_sent_title
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderColor": "black",
                    "borderRadius": 20,
                    "borderWidth": 0.8,
                    "height": 40,
                    "overflow": "hidden",
                    "width": 40,
                  }
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 30,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "marginLeft": 8,
                    },
                    Object {
                      "color": "#EA4335",
                    },
                  ]
                }
              >
                $2000
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 15,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginLeft": 55,
                  },
                ]
              }
            >
              1000
               
              DOT
            </Text>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  Object {
                    "marginTop": 10,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#888888",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 12,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {
                      "alignSelf": "flex-start",
                      "marginLeft": 3,
                    },
                  ]
                }
              >
                01/01/70 03:00
              </Text>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#67D44D",
                        "fontSize": 20,
                      },
                      Object {
                        "alignSelf": "flex-end",
                        "marginLeft": 3,
                      },
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#2AB2E2",
        "borderRadius": 50,
        "bottom": 10,
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 10,
        "width": 60,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/send.png",
        }
      }
      style={
        Object {
          "height": 25,
          "width": 16,
        }
      }
    />
  </View>
</View>
`;

exports[`Test view without messages (ChatBot) 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <View
        style={
          Object {
            "marginBottom": 50,
          }
        }
      />
    }
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "scaleY": -1,
        },
        Object {
          "width": "100%",
        },
      ]
    }
    viewabilityConfigCallbackPairs={Array []}
    windowSize={5}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "marginBottom": 50,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#2AB2E2",
        "borderRadius": 50,
        "bottom": 10,
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 10,
        "width": 60,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontFamily": "Roboto-Regular",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    >
      Start
    </Text>
  </View>
</View>
`;

exports[`Test view without messages 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <View
        style={
          Object {
            "marginBottom": 80,
          }
        }
      />
    }
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "scaleY": -1,
        },
        Object {
          "width": "100%",
        },
      ]
    }
    viewabilityConfigCallbackPairs={Array []}
    windowSize={5}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "marginBottom": 80,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#2AB2E2",
        "borderRadius": 50,
        "bottom": 10,
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 10,
        "width": 60,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/send.png",
        }
      }
      style={
        Object {
          "height": 25,
          "width": 16,
        }
      }
    />
  </View>
</View>
`;
